Fix issue with table rendering on mobile
- Fixes issue with columns overlapping without scrollbars.
- Fixes regression bugs introduced by previous fixes to district_needs
page.
- Fixes #42
- Fixes #67

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,7 +135,6 @@ footer{
 table {
     border-collapse: collapse;
     width: 100%;
-    table-layout:fixed;
 }
 
 td, th {
